--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <header>
-        <h1>ComputerHelp - სისტემური ადმინისტრატორის დახმარება</h1>
-        <p>დისტანციური სერვისები Windows Server-ზე, Veeam, MikroTik და სხვა სისტემებზე.</p>
+        <h1>ComputerHelp - კომპიუტერული მომსახურეობა</h1>
+        <p>პირველი ონლაინ დახმარების საიტი</p>
     </header>
     <section>
         <h2>სერვისები:</h2>
         <ul>
             <li>🖥️ Windows Server კონფიგურაცია (DNS, DHCP, AD)</li>
-            <li>🔁 Veeam Backup-ის დაყენება და მონიტორინგი</li>
-            <li>🌐 MikroTik როუტერის გამართვა (VPN, GRE, ბექაპი)</li>
+            <li>🔁 ბექაფირების გამართვა</li>
+            <li>🌐 ქსელის მოწესრიგება</li>
             <li>🛠️ კომპიუტერის დიაგნოსტიკა და Windows-ის გადაყენება</li>
         </ul>
     </section>
@@ -25,9 +25,9 @@
         <h2>ფასები:</h2>
         <table>
             <tr><th>სერვისი</th><th>ფასი</th></tr>
-            <tr><td>სერვერის დისტანციური გამართვა</td><td>₾50</td></tr>
-            <tr><td>Veeam კონფიგურაცია/მონიტორინგი</td><td>₾40</td></tr>
-            <tr><td>MikroTik VPN ტუნელი</td><td>₾30</td></tr>
+            <tr><td>სერვერის გამართვა</td><td>₾100-₾200</td></tr>
+            <tr><td>ბექაფირება/მონიტორინგი</td><td>₾50-₾250</td></tr>
+            <tr><td>ვინდოუსის დაყენება</td><td>₾40-₾60-</td></tr>
         </table>
     </section>
     <footer>
