--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li>🖥️ Windows Server კონფიგურაცია (DNS, DHCP, AD)</li>
             <li>🔁 ბექაფირების გამართვა</li>
             <li>🌐 ქსელის მოწესრიგება</li>
+            <li>🛠️ კორპორატიული მეილის გამართვა (www.თქვენიკომპანიისსახელი.GE)</li>
             <li>🛠️ კომპიუტერის დიაგნოსტიკა და Windows-ის გადაყენება</li>
         </ul>
     </section>
