--- a/index.html
+++ b/index.html
@@ -1,38 +1,48 @@
-
 <!DOCTYPE html>
 <html lang="ka">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ComputerHelp</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>ComputerHelp</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>
-        <h1>ComputerHelp - კომპიუტერული მომსახურეობა</h1>
-        <p>პირველი ონლაინ დახმარების საიტი</p>
-    </header>
+  <header>
+    <img src="computerhelp_logo.png" alt="ComputerHelp Logo" class="logo" />
+    <h1>ComputerHelp</h1>
+    <p>დისტანციური სისტემური ადმინისტრაციის სერვისები</p>
+  </header>
+
+  <main>
     <section>
-        <h2>სერვისები:</h2>
-        <ul>
-            <li>🖥️ Windows Server კონფიგურაცია (DNS, DHCP, AD)</li>
-            <li>🔁 ბექაფირების გამართვა</li>
-            <li>🌐 ქსელის მოწესრიგება</li>
-            <li>🛠️ კორპორატიული მეილის გამართვა (www.თქვენიკომპანიისსახელი.GE)</li>
-            <li>🛠️ კომპიუტერის დიაგნოსტიკა და Windows-ის გადაყენება</li>
-        </ul>
+      <h2>სერვისები</h2>
+      <ul>
+        <li>🖥️ Windows Server – DNS, DHCP, AD</li>
+        <li>🔐 Veeam Backup – სრულად კონფიგურაცია და მონიტორინგი</li>
+        <li>🌐 MikroTik – VPN, GRE ტუნელები, NAT</li>
+        <li>📦 დისტანციური ტექნიკური მხარდაჭერა და კონსულტაცია</li>
+      </ul>
     </section>
+
     <section>
-        <h2>ფასები:</h2>
-        <table>
-            <tr><th>სერვისი</th><th>ფასი</th></tr>
-            <tr><td>სერვერის გამართვა</td><td>₾100-₾200</td></tr>
-            <tr><td>ბექაფირება/მონიტორინგი</td><td>₾50-₾250</td></tr>
-            <tr><td>ვინდოუსის დაყენება</td><td>₾40-₾60-</td></tr>
-        </table>
+      <h2>ფასები</h2>
+      <table>
+        <tr><th>სერვისი</th><th>საწყისი ფასი</th></tr>
+        <tr><td>Windows Server დაყენება</td><td>₾100</td></tr>
+        <tr><td>Veeam Backup დაყენება</td><td>₾150</td></tr>
+        <tr><td>MikroTik VPN კონფიგურაცია</td><td>₾80</td></tr>
+        <tr><td>One-time Support</td><td>₾50</td></tr>
+      </table>
     </section>
-    <footer>
-        <p>დამიკავშირდი Telegram-ზე: <a href="https://t.me/YourTelegramUsername" target="_blank">@YourTelegramUsername</a></p>
-    </footer>
+
+    <section>
+      <h2>კონტაქტი</h2>
+      <p>📬 მომწერე Telegram-ზე: <a href="https://t.me/wekantala" target="_blank">@wekantala</a></p>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 ComputerHelp — ყველა უფლება დაცულია</p>
+  </footer>
 </body>
 </html>
