--- a/index.html
+++ b/index.html
@@ -1,48 +1,121 @@
 <!DOCTYPE html>
 <html lang="ka">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>ComputerHelp</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="logo.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
+
   <header>
-    <img src="computerhelp_logo.png" alt="ComputerHelp Logo" class="logo" />
-    <h1>ComputerHelp</h1>
-    <p>დისტანციური სისტემური ადმინისტრაციის სერვისები</p>
+    <img src="logo.png" alt="Logo" class="logo">
+    <nav class="main-nav">
+      <a href="#">სერვისები</a>
+      <a href="#">ონლაინ დახმარება</a>
+    </nav>
   </header>
 
   <main>
-    <section>
-      <h2>სერვისები</h2>
-      <ul>
-        <li>🖥️ Windows Server – DNS, DHCP, AD</li>
-        <li>🔐 Veeam Backup – სრულად კონფიგურაცია და მონიტორინგი</li>
-        <li>🌐 MikroTik – VPN, GRE ტუნელები, NAT</li>
-        <li>📦 დისტანციური ტექნიკური მხარდაჭერა და კონსულტაცია</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>ფასები</h2>
-      <table>
-        <tr><th>სერვისი</th><th>საწყისი ფასი</th></tr>
-        <tr><td>Windows Server დაყენება</td><td>₾100</td></tr>
-        <tr><td>Veeam Backup დაყენება</td><td>₾150</td></tr>
-        <tr><td>MikroTik VPN კონფიგურაცია</td><td>₾80</td></tr>
-        <tr><td>One-time Support</td><td>₾50</td></tr>
-      </table>
-    </section>
-
-    <section>
-      <h2>კონტაქტი</h2>
-      <p>📬 მომწერე Telegram-ზე: <a href="https://t.me/wekantala" target="_blank">@wekantala</a></p>
-    </section>
+    <h1>კეთილი იყოს თქვენი მობრძანება ComputerHelp-ზე</h1>
+    <p>დისტანციური დახმარება, Windows სერვერები, Backup, MikroTik და სხვა!</p>
   </main>
 
-  <footer>
-    <p>© 2025 ComputerHelp — ყველა უფლება დაცულია</p>
-  </footer>
+  <!-- ჩატის ღილაკები -->
+  <div class="chat-icons">
+    <a href="#" class="whatsapp" title="დაგვიკავშირდით WhatsApp-ზე"><i class="fab fa-whatsapp"></i></a>
+    <a href="#" class="messenger" title="დაგვიკავშირდით Messenger-ზე"><i class="fab fa-facebook-messenger"></i></a>
+  </div>
+
 </body>
 </html>
+🎨 style.css განახლებული სტილი:
+css
+Copy
+Edit
+body {
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f3f4f6;
+}
+
+header {
+  background-color: #1f2937;
+  color: white;
+  padding: 20px 40px;
+  position: relative;
+}
+
+.logo {
+  width: 50px;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
+.main-nav {
+  margin-left: 80px;
+}
+
+.main-nav a {
+  color: white;
+  margin-right: 20px;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+main {
+  padding: 40px;
+  text-align: center;
+}
+
+.chat-icons {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.chat-icons a {
+  font-size: 30px;
+  color: white;
+  padding: 12px;
+  border-radius: 50%;
+  text-align: center;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  transition: transform 0.2s;
+}
+
+.chat-icons a:hover {
+  transform: scale(1.1);
+}
+
+.whatsapp {
+  background-color: #25D366;
+}
+
+.messenger {
+  background-color: #0084FF;
+}
+📌 შემდეგი ეტაპი: რომ მოგეწონოს ეს სტრუქტურა, შემდეგ დავამატებთ:
+
+რეალურ ბმულებს,
+
+ფორმებს,
+
+კავშირის მექანიზმს (შეტყობინება ან ვოცაფზე გადაგზავნა).
+
+გინდა ეს ფაილები (index.html, style.css, logo.png) გამზადებული გაგიზიარო ZIP-ფაილად? თუ გინდა რომელიმე დეტალი შევცვალო წინასწარ?
+
+
+
+
+
+
+
+
