--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <title>ComputerHelp</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" href="logo.png">
+  <link rel="icon" type="image/png" href="computerhelp_logo.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
   <header>
-    <img src="logo.png" alt="Logo" class="logo">
+    <img src="computerhelp_logo.png" alt="Logo" class="logo">
     <nav class="main-nav">
       <a href="#">სერვისები</a>
       <a href="#">ონლაინ დახმარება</a>
