--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <title>ComputerHelp</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" href="computerhelp_logo.png">
+  <link rel="icon" type="image/png" href="logo.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
   <header>
-    <img src="computerhelp_logo.png" alt="Logo" class="logo">
+    <img src="logo.png" alt="Logo" class="logo">
     <nav class="main-nav">
       <a href="#">სერვისები</a>
       <a href="#">ონლაინ დახმარება</a>
@@ -30,92 +30,3 @@
 
 </body>
 </html>
-🎨 style.css განახლებული სტილი:
-css
-Copy
-Edit
-body {
-  font-family: sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #f3f4f6;
-}
-
-header {
-  background-color: #1f2937;
-  color: white;
-  padding: 20px 40px;
-  position: relative;
-}
-
-.logo {
-  width: 50px;
-  position: absolute;
-  top: 20px;
-  left: 20px;
-}
-
-.main-nav {
-  margin-left: 80px;
-}
-
-.main-nav a {
-  color: white;
-  margin-right: 20px;
-  text-decoration: none;
-  font-weight: bold;
-  font-size: 18px;
-}
-
-main {
-  padding: 40px;
-  text-align: center;
-}
-
-.chat-icons {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-}
-
-.chat-icons a {
-  font-size: 30px;
-  color: white;
-  padding: 12px;
-  border-radius: 50%;
-  text-align: center;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-  transition: transform 0.2s;
-}
-
-.chat-icons a:hover {
-  transform: scale(1.1);
-}
-
-.whatsapp {
-  background-color: #25D366;
-}
-
-.messenger {
-  background-color: #0084FF;
-}
-📌 შემდეგი ეტაპი: რომ მოგეწონოს ეს სტრუქტურა, შემდეგ დავამატებთ:
-
-რეალურ ბმულებს,
-
-ფორმებს,
-
-კავშირის მექანიზმს (შეტყობინება ან ვოცაფზე გადაგზავნა).
-
-გინდა ეს ფაილები (index.html, style.css, logo.png) გამზადებული გაგიზიარო ZIP-ფაილად? თუ გინდა რომელიმე დეტალი შევცვალო წინასწარ?
-
-
-
-
-
-
-
-
