--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <header>
     <img src="computerhelp_logo.png" alt="Logo" class="logo">
     <nav class="main-nav">
-      <a href="#">სერვისები</a>
       <a href="#">ონლაინ დახმარება</a>
+      <a href="#">გააფორმე გამოძახება</a>
     </nav>
   </header>
 
   <main>
-    <h1>კეთილი იყოს თქვენი მობრძანება ComputerHelp-ზე</h1>
-    <p>დისტანციური დახმარება, Windows სერვერები, Backup, MikroTik და სხვა!</p>
+    <h1>მადლობა რომ ამირჩიე</h1>
+    <p>დისტანციური დახმარება!</p>
   </main>
 
   <!-- ჩატის ღილაკები -->
