--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ComputerHelp</title>
-    <link rel="icon" href="logo.png" />
+    <link rel="icon" href="computerhelp_logo.png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
@@ -16,7 +16,7 @@
     <!-- Header -->
     <header class="bg-gray-900 text-white p-4 flex items-center justify-between shadow-md">
       <div class="flex items-center">
-        <img src="logo.png" alt="Logo" class="w-10 h-10 mr-3" />
+        <img src="computerhelp_logo.png" alt="Logo" class="w-10 h-10 mr-3" />
         <h1 class="text-xl font-bold">ComputerHelp</h1>
       </div>
     </header>
